flash_defconfig: enable POWERSUSPEND
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>

--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -63,6 +63,7 @@ CONFIG_MSM_CPU_VOLTAGE_CONTROL=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ADRENO_IDLER=y
+CONFIG_POWERSUSPEND=y
 
 #
 # IRQ subsystem
