--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -267,12 +267,14 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_ROW is not set
 CONFIG_IOSCHED_SIOPLUS=y
 # CONFIG_IOSCHED_TEST is not set
+CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_ROW is not set
 CONFIG_DEFAULT_SIOPLUS=y
 # CONFIG_DEFAULT_TEST is not set
+# CONFIG_DEFAULT_ZEN is not set
 CONFIG_DEFAULT_IOSCHED="sioplus"
 CONFIG_CGROUP_BFQIO=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
