--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -264,6 +264,7 @@ CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_ROW is not set
 CONFIG_IOSCHED_SIOPLUS=y
@@ -271,6 +272,7 @@ CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_MAPLE is not set
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_ROW is not set
 CONFIG_DEFAULT_SIOPLUS=y
