flash_defconfig: enable ZEN_INTERACTIVE

--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -74,6 +74,7 @@ CONFIG_STATE_NOTIFIER=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_KSM=y
 CONFIG_UKSM=y
+CONFIG_ZEN_INTERACTIVE=y
 
 #
 # IRQ subsystem
