--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -593,7 +593,7 @@ CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_CROSS_MEMORY_ATTACH=y
-# CONFIG_CLEANCACHE is not set
+CONFIG_CLEANCACHE=y
 # CONFIG_FRONTSWAP is not set
 CONFIG_MEMORY_HOLE_CARVEOUT=y
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
