flash_defconfig: enable MSM_CPU_VOLTAGE_CONTROL and FORCE_FAST_CHARGE
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>

--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -57,6 +57,12 @@ CONFIG_AUDIT=y
 CONFIG_HAVE_GENERIC_HARDIRQS=y
 
 #
+# FLASH setup
+#
+CONFIG_MSM_CPU_VOLTAGE_CONTROL=y
+CONFIG_FORCE_FAST_CHARGE=y
+
+#
 # IRQ subsystem
 #
 CONFIG_GENERIC_HARDIRQS=y
