--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -261,6 +261,7 @@ CONFIG_EFI_PARTITION=y
 #
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_ROW is not set
 # CONFIG_IOSCHED_TEST is not set
