flash_defconfig: enable WQ_POWER_EFFICIENT

--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -61,6 +61,7 @@ CONFIG_HAVE_GENERIC_HARDIRQS=y
 #
 CONFIG_MSM_CPU_VOLTAGE_CONTROL=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 #
 # IRQ subsystem
