flash_defconfig: enable ZEN_DECISION
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>

--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -64,6 +64,7 @@ CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ADRENO_IDLER=y
 CONFIG_POWERSUSPEND=y
+CONFIG_ZEN_DECISION=y
 
 #
 # IRQ subsystem
