flash_defconfig: enable MAKO_HOTPLUG
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>

--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -65,6 +65,7 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ADRENO_IDLER=y
 CONFIG_POWERSUSPEND=y
 CONFIG_ZEN_DECISION=y
+CONFIG_MAKO_HOTPLUG=y
 
 #
 # IRQ subsystem
