flash_defconfig: enable WAKE_GESTURES
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>

--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -66,6 +66,7 @@ CONFIG_ADRENO_IDLER=y
 CONFIG_POWERSUSPEND=y
 CONFIG_ZEN_DECISION=y
 CONFIG_MAKO_HOTPLUG=y
+CONFIG_WAKE_GESTURES=y
 
 #
 # IRQ subsystem
