--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -67,6 +67,7 @@ CONFIG_POWERSUSPEND=y
 CONFIG_ZEN_DECISION=y
 CONFIG_MAKO_HOTPLUG=y
 CONFIG_WAKE_GESTURES=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 
 #
 # IRQ subsystem
