--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -68,6 +68,7 @@ CONFIG_ZEN_DECISION=y
 CONFIG_MAKO_HOTPLUG=y
 CONFIG_WAKE_GESTURES=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_STATE_NOTIFIER=y
 
 #
 # IRQ subsystem
