flash_defconfig: enable SOUND_CONTROL_HAX_3_GPL
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>

--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -69,6 +69,7 @@ CONFIG_MAKO_HOTPLUG=y
 CONFIG_WAKE_GESTURES=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_STATE_NOTIFIER=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 
 #
 # IRQ subsystem
