--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -66,6 +66,7 @@ CONFIG_ADRENO_IDLER=y
 CONFIG_POWERSUSPEND=y
 CONFIG_ZEN_DECISION=y
 CONFIG_MAKO_HOTPLUG=y
+CONFIG_BLU_PLUG=y
 CONFIG_WAKE_GESTURES=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_STATE_NOTIFIER=y
