--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -644,6 +644,7 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CHILL is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ELEMENTALX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
@@ -657,6 +658,7 @@ CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
+CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
