flash_defconfig: enable UKSM
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>

--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -73,6 +73,7 @@ CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_KSM=y
+CONFIG_UKSM=y
 
 #
 # IRQ subsystem
