--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -576,7 +576,7 @@ CONFIG_PREEMPT_COUNT=y
 CONFIG_HZ_300=y
 # CONFIG_HZ_1000 is not set
 CONFIG_HZ=300
-CONFIG_SCHED_HRTICK=y
+# CONFIG_SCHED_HRTICK is not set
 # CONFIG_THUMB2_KERNEL is not set
 CONFIG_AEABI=y
 # CONFIG_OABI_COMPAT is not set
