--- a/arch/arm/configs/flash_defconfig
+++ b/arch/arm/configs/flash_defconfig
@@ -661,6 +661,7 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
 CONFIG_CPU_FREQ_GOV_BARRY_ALLEN=y
@@ -675,6 +676,9 @@ CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+# CONFIG_CPU_FREQ_GOV_SMARTMAX_30 is not set
+CONFIG_CPU_FREQ_GOV_SMARTMAX_SHAMU=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_BOOST=y
