Mako_Hotplug: This needs to be in the kconfig to be a config item

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1365,6 +1365,13 @@ config BLU_PLUG
 	default n
 	help
 	  The Dynamic hotplug driver automatically online/offline CPUs proportional to system load.
+	  
+config MAKO_HOTPLUG
+	bool "Mako hotplug driver"
+	depends on HOTPLUG_CPU
+	default n
+	help
+	  The Dynamic hotplug driver automatically online/offline CPUs proportional to system load.
 
 config MSM_CPR
 	tristate "Use MSM CPR in S/W mode"
